dfir_rs/tests/compile-fail-stable/surface_syntax_paren_semicolon.rs
../compile-fail/surface_syntax_paren_semicolon.rs